force-app/main/default/objects/RE_Holiday_Calendars__c/RE_Holiday_Calendars__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Revolution Holiday Calendars</description>
    <label>RE Holiday Calendars</label>
</CustomObject>