force-app/main/default/objects/RE_Holiday_Calendars__c/fields/Day__c.field-meta.xml
<CustomField>
    <fullName>Day__c</fullName>
    <label>Day</label>
    <length>10</length>
    <type>Text</type>
</CustomField>