force-app/main/default/objects/RE_Holiday_Calendars__c/fields/Holiday__c.field-meta.xml
<CustomField>
    <fullName>Holiday__c</fullName>
    <label>Holiday</label>
    <length>255</length>
    <required>true</required>
    <type>Text</type>
</CustomField>