force-app/main/default/objects/RE_Holiday_Calendars__c/listViews/Canada_Holiday_List.listView-meta.xml
<ListView>
    <fullName>Canada_Holiday_List</fullName>
    <columns>NAME</columns>
    <columns>Holiday__c</columns>
    <columns>Day__c</columns>
    <columns>Holiday_Date__c</columns>
    <columns>Country_Name__c</columns>
    <columns>Comments__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Country_Name__c</field>
        <operation>equals</operation>
        <value>Canada</value>
    </filters>
    <label>Canada Holiday List</label>
    <language>en_US</language>
</ListView>